--- a/docs/src/content/docs/features/sorting.mdx
+++ b/docs/src/content/docs/features/sorting.mdx
@@ -90,3 +90,5 @@ Your sort preferences are automatically saved and persist between sessions. When
 
 - your selected sort criteria (name, size, extension, etc.)
 - your sort direction (ascending or descending)
+
+Optionally, you can enable `This path only` in the sort menu to apply to only the current directory.
