--- a/docs/src/content/docs/get-started/tutorial.mdx
+++ b/docs/src/content/docs/get-started/tutorial.mdx
@@ -79,6 +79,8 @@ once you have files selected, you may choose to use these operations or use the 
   <InlineSVG src="/rovr/screenshots/compress-button.svg" alt="compress button" />
 - **extract archive**: `ctrl+e`
   <InlineSVG src="/rovr/screenshots/extract-button.svg" alt="extract button" />
+- **copy path**: `Y` (uppercase Y)
+  <InlineSVG src="/rovr/screenshots/copy-path-button.svg" alt="copy button" />
 
 ## navigation features
 
