--- a/docs/src/content/docs/guides/file-operations.mdx
+++ b/docs/src/content/docs/guides/file-operations.mdx
@@ -22,6 +22,12 @@ import InlineSVG from "@/components/InlineSVG.astro";
 - create a compressed file: `shift+e`
 - extract a compressed file: `ctrl+e`
 
+there are additional options when creating an archive
+
+<InlineSVG src="/rovr/screenshots/archive-options.svg" alt="archive options dialog" />
+
+it lets you select the archive format and the compression level interactively.
+
 ### visual/select mode
 
 <InlineSVG src="/rovr/screenshots/select-mode.svg" alt="select/visual mode" />
@@ -43,7 +49,7 @@ once in visual mode, you can select multiple files:
 
 <InlineSVG src="/rovr/screenshots/right-click.svg" alt="a mini popup from right-clicking an object" />
 
-rovr supports mouse interactions for better usability:
+rovr supports mouse interactions for enhanced usability:
 
 - **right-click**: open a context menu for the selected file or folder with common operations
 - **double click**: open the directory/launch the app
