fix: resolve coderabbitai stuff

--- a/docs/src/content/docs/configuration/theming.mdx
+++ b/docs/src/content/docs/configuration/theming.mdx
@@ -35,7 +35,7 @@ you can take a look at the reference in [textual](https://textual.textualize.io/
 | foreground | The default text color, which should be legible on `background`, `surface`, and `panel`.                                                      |
 | background | A color used for the background, where there is no content. Used as the default background color for screens.                                 |
 | surface    | The default background color of widgets, typically sitting on top of `background`.                                                            |
-| panel      | A color used to differentiate a part of the UI form the main content. Used sparingly in Textual itself.                                       |
+| panel      | A color used to differentiate a part of the UI from the main content. Used sparingly in Textual itself.                                       |
 | boost      | A color with alpha that can be used to create *layers* on a background.                                                                       |
 | warning    | Indicates a warning. Typically used as a background color. `text-warning` can be used for foreground.                                         |
 | error      | Indicates an error. Typically used as a background color. `text-error` can be used for foreground.                                            |
