--- a/docs/src/content/docs/get-started/installation.mdx
+++ b/docs/src/content/docs/get-started/installation.mdx
@@ -10,7 +10,7 @@ import InlineSVG from "@/components/InlineSVG.astro";
 
 - a patched font that supports nerd font icons
   <br />
-  if you dont have any supported fonts, get one from
+  if you don't have any supported fonts, get one from
   [nerdfonts.com](https://www.nerdfonts.com/font-downloads) for the best
   experience.
   <br />
