docs: minor tweaks

--- a/docs/src/content/docs/dev/overview.mdx
+++ b/docs/src/content/docs/dev/overview.mdx
@@ -22,7 +22,7 @@ I can't answer this question, but I can answer why you _shouldn't_ use rovr.
    <br/>other file managers like [yazi](https://github.com/sxyazi/yazi), [ranger](https://github.com/ranger/ranger) or [nnn](https://github.com/jarun/nnn) are amazing file explorers, and rovr cannot compete with their flexibility, extensibility or just raw speed.
 
 2. when you are allergic to non-compiled apps
-   <br/>rovr is made in python, and uses some features that prevents it from being compiled by [pyinstaller](https://github.com/pyinstaller/pyinstaller) or [nuitka](https://github.com/Nuitka/Nuitka). if you are someone who is allergic to such an app, please step away now.
+   <br/>rovr is made in python, so only a [nuitka](https://nuitka.net) compiled version is available. if you are looking for a pure machine-code executable, this is not for you.
 
 ### why did I make it?
 
