--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
   tagline: a modern, customizable, and aesthetically pleasing terminal file explorer.
   actions:
     - text: get started
-      link: /rovr/dev/overview
+      link: /rovr/overview
       icon: right-arrow
     - text: view on github
       link: https://github.com/NSPC911/rovr
