fix: use decode, fix docs

--- a/docs/src/content/docs/dev/features/shell-exec.mdx
+++ b/docs/src/content/docs/dev/features/shell-exec.mdx
@@ -37,7 +37,7 @@ runs the command and blocks rovr until it completes. suitable for quick commands
 
 ### suspend mode
 
-suspends the rovr process and gives full control to the command being ran.
+suspends the rovr process and gives full control to the command being run.
 
 - rovr suspends completely, giving full terminal control to the command
 - perfect for interactive editors, shells, or TUI applications
