docs: generate things
[skip ci]

NSPC911 forgot to run some scripts

skip-checks: true

--- a/docs/src/content/docs/reference/keybindings.mdx
+++ b/docs/src/content/docs/reference/keybindings.mdx
@@ -92,6 +92,7 @@ just copy over the contents of the desired profile into your `config.toml` file 
 | command_palette              | Launch command palette | <kbd>ctrl+p</kbd>                              | <kbd>ctrl+p</kbd>                              | <kbd>ctrl+p</kbd>                        |
 | suspend_app                  | Suspend app            | <kbd>ctrl+z</kbd>                              | <kbd>ctrl+z</kbd>                              | <kbd>ctrl+z</kbd>                        |
 | open_editor                  | Open in editor         | <kbd>e</kbd>                                   | <kbd>e</kbd>                                   | <kbd>ctrl+o</kbd>                        |
+| show_shell_screen            | Open shell screen      | <kbd>></kbd>                                   | _none_                                         | _none_                                   |
 
 ## alternate layers
 
